# svoc_keygen

./: CMakeLists.txt  README.md  arduino.c  main.cpp
HMAC_DRNG/hmac_drbg/: hmac_drbg.cpp
HMAC_DRNG/hmac_sha256/: hmac_sha256.cpp
HMAC_DRNG/sha256/: sha256.cpp
NTL/: WordVector.h  vector.h
